--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,9 @@
 form input,
 form textarea {
   width: 100%; }
+
+form input[type="submit"] {
+  margin-top: 15px; }
+
+.title-img {
+  height: 290px; }
