Added response message to show client

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -7,3 +7,12 @@ form
 
 .title-img
   height: 290px
+
+div
+  #response
+    background-color: #999999
+    border-radius: 7px
+    width: 70%
+    margin-left: 15%
+    margin-right: 15%
+    margin-top: 15px
