--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7,3 +7,11 @@ form input[type="submit"] {
 
 .title-img {
   height: 290px; }
+
+div #response {
+  background-color: #999999;
+  border-radius: 7px;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 15px; }
